# libmemintercept

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  pointerToAllocMap.cpp  printFrees.cpp
include/: libmemintercept.h
src/: intercept.cpp
test/: AllocInfo.cpp  AllocInfo.sh  AllocInfoLib.cpp  CMakeLists.txt  CheckMalloc.cpp  CheckMalloc.sh  SanityCheck.cpp  SanityCheck.sh  run.py
